--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,10 +30,10 @@
             <div>
             <form name="loginform" class="form-group" th:action="@{/login}" action="/login" method="post">
                 <div class="p-2 bg-dark">
-                    <label>Felhasználónév</label><input class="form-control" type="text" required  name="username" placeholder="Username" />
+                    <label>Neptun kód</label><input class="form-control" type="text" required  name="username" placeholder="neptun kód" />
                 </div>
                 <div class="p-2 bg-dark">
-                    <label>Jelszó</label><input class="form-control" type="password" required  name="password" placeholder="Password" />
+                    <label>Jelszó</label><input class="form-control" type="password" required  name="password" placeholder="jelszó" />
                 </div>
                 <div>
                     <div>
