--- a/src/main/resources/templates/studentreg.html
+++ b/src/main/resources/templates/studentreg.html
@@ -30,7 +30,7 @@
             <div>
                 <form name="loginform" class="form-group" th:action="@{/studentreg}" method="post">
                     <div class="p-2 bg-dark">
-                        <label>NEPTUN KÓD: </label><input class="form-control" type="text"  required  name="username" placeholder="neptun kód" />
+                        <label>Neptun kód: </label><input class="form-control" type="text"  required  name="username" placeholder="neptun kód" />
                     </div>
                     <div class="p-2 bg-dark">
                         <label>Teljes név: </label><input class="form-control" type="text" required  name="name" placeholder="Teljes név" />
