--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -73,3 +73,8 @@ body {
     color: goldenrod;
     font-weight: bold;
 }
+.textCenter{
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+}
